# gtklantetris

./: AUTHORS  ChangeLog  Doxyfile  HOWTO  Makefile.in  README.md  autogen.sh  configure  gtklantetris.kdevelop  gtklantetris.kdevelop.pcs  gtklantetris.kdevses  maemo_autogen.sh  maemo_configure.ac  pc_autogen.sh  pc_configure.ac
data/: Makefile.am  Makefile.in  gtklantetris.desktop.in  pc_Makefile.am  pc_gtklantetris.desktop.in  ru.karelia.cs.gtklantetris.service.in
debian/: README.Debian  changelog  control  control~  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gtklantetris-default.ex  gtklantetris.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/: .kdbgrc.gtklantetris  Makefile.am  Makefile.in  botlogic.c  dialogs.c  highscore.c  interface.c  misc.c  network.c  tetris.c  tetris.h
