# for MAEMO
# Place the data file to appropriate directory

# Place the service file
dbusdir=$(datadir)/dbus-1/services
dbus_DATA=ru.karelia.cs.gtklantetris.service

# Place the desktop file
#desktopdir=$(datadir)/applications
desktopdir=$(prefix)/share/applications/hildon
desktop_DATA=gtklantetris.desktop

icon_26x26dir=$(datadir)/icons/hicolor/26x26/hildon
icon_26x26_DATA=icons/26x26/gtklantetris.png

#icon_40x40dir=/usr/share/icons/hicolor/40x40/hildon/
icon_40x40dir=$(datadir)/icons/hicolor/40x40/hildon
icon_40x40_DATA=icons/40x40/gtklantetris.png

icon_scalabledir=$(datadir)/icons/hicolor/scalable/hildon
icon_scalable_DATA=icons/scalable/gtklantetris.png

#icon_48x48dir=$(prefix)/share/pixmaps
#icon_48x48_DATA=icons/48x48/gtklantetris.png

EXTRA_DIST = $(dbus_DATA) $(desktop_DATA)  $(icon_26x26_DATA)  $(icon_40x40_DATA) 
#EXTRA_DIST = $(dbus_DATA) $(desktop_DATA) $(mydata_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_48x48_DATA)


#desktopentrydir=`$PKG_CONFIG osso-af-settings --variable=desktopentrydir`
#serviceentrydir=`$PKG_CONFIG osso-af-settings --variable=dbusservicedir`


#icon_scalable_DATA = icons/scalable/maemopad.png


